@@ -2,6 +2,7 @@ Changes in version 0.6 (2004-xx-xx)
 -----------------------------------
 
 * Added feature so DaoAuthenticationProvider returns User in Authentication
+* Added AbstractIntegrationFilter.secureContext property for custom contexts
 * Refactored User to UserDetails interface
 * Fixed Linux compatibility issues (directory case sensitivity etc)
 * Fixed AbstractProcessingFilter to handle servlet spec container differences
